# nested-struct-macro

./: Cargo.toml
nested-attr/: Cargo.toml
nested-attr-impl/: Cargo.toml
nested-attr-impl/src/: lib.rs
nested-attr/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
