[package]
name = "nested-attr-impl"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
convert_case = "0.10.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["printing", "parsing"] }

[lints]
workspace = true
